# xdartscan

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  config.ini  main.c  main_test.c  scan_engine.c
headers/: config.h  config_manager.h  csv_manager.h  file_signatures.h  random_test.h  report_manager.h  scan_engine.h  utils.h
logic/: config_manager.c  csv_manager.c  random_test.c  report_manager.c  scan_engine.c
misc/: config_manager.c  utils.c
testing/: test_entropy.c  test_signatures.c
